<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_button"
        android:icon="@drawable/ic_home_button"
        android:title="@string/home_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/saved_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_add_recipe_button"
        android:title="@string/add_recipe_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_search_button"
        android:title="@string/search_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_settings_button"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>