<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_folder_details.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <!-- AFC Toolbar with back button, folder name, and edit button -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/afc_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/afc_backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_button_description"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/afc_folderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/afc_editButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_edit_button"
            android:contentDescription="@string/edit_button_description"
            android:layout_gravity="end"/>

    </androidx.appcompat.widget.Toolbar>

    <!-- RecyclerView for displaying recipes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/afc_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/afc_toolbar"
        android:paddingTop="8dp"/>

</RelativeLayout>
